add get articles handler (no tests)
