# internal/app/shared/dto/io_blog.go
@@ -1,0 +1,10 @@
+package dto
+
+type GetArticlesIn struct {
+	FromSlug *string
+}
+
+type GetArticlesOut struct {
+	Articles []Article
+	HasMore  bool
+}
